Gruundstück to Grundstück update deu.ini

--- a/resources/deu.ini
+++ b/resources/deu.ini
@@ -308,4 +308,4 @@ buy.noself=Du kannst nicht dein eigenes Grundstück kaufen
 buy.notforsale=Dieses Grundstück wird nicht verkauft
 buy.confirm=Möchtest du wirklich das Grundstück {%0} für ${%1} kaufen? Um es zu bestätigen, benutze /p buy confirm
 buy.success=Du hast das Grundstück {%0} erfolgreich für ${%1} erworben
-buy.sold=Der Spieler {%0} hat dein Gruundstück ({%1}) für ${%2} gekauft
+buy.sold=Der Spieler {%0} hat dein Grundstück ({%1}) für ${%2} gekauft
